feat: add PATCH /v2/Chapters/{id} to update filename and volume number, moving the file on disk if changed
